tests/fixtures/flow/mermaid/positive/graph_td_semicolons.mmd
graph TD
%% accepted comment
Start[Start]; Validate{Validate}
Start -->|accepted| Validate
