tests/fixtures/flow/mermaid/negative/script_like_label.mmd
flowchart TD
A["{{ customer.secret }}"] --> B
